syntax = "proto3";
option csharp_namespace = "Neuro.Recording.Common";

enum SystemType {
    None_SystemType = 0;
    Hallway = 1;
    Storage = 2;
    Cafeteria = 3;
    Reactor = 4;
    UpperEngine = 5;
    Nav = 6;
    Admin = 7;
    Electrical = 8;
    LifeSupp = 9;
    Shields = 10;
    MedBay = 11;
    Security = 12;
    Weapons = 13;
    LowerEngine = 14;
    Comms = 15;
    ShipTasks = 16;
    Doors = 17;
    Sabotage = 18;
    Decontamination = 19;
    Launchpad = 20;
    LockerRoom = 21;
    Laboratory = 22;
    Balcony = 23;
    Office = 24;
    Greenhouse = 25;
    Dropship = 26;
    Decontamination2 = 27;
    Outside = 28;
    Specimens = 29;
    BoilerRoom = 30;
    VaultRoom = 31;
    Cockpit = 32;
    Armory = 33;
    Kitchen = 34;
    ViewingDeck = 35;
    HallOfPortraits = 36;
    CargoBay = 37;
    Ventilation = 38;
    Showers = 39;
    Engine = 40;
    Brig = 41;
    MeetingRoom = 42;
    Records = 43;
    Lounge = 44;
    GapRoom = 45;
    MainHall = 46;
    Medical = 47;
    Decontamination3 = 48;
}
