syntax = "proto3";
option csharp_namespace = "Neuro.Recording.Common";

enum TaskType {
    None_TaskType = 0;
    SubmitScan = 1;
    PrimeShields = 2;
    FuelEngines = 3;
    ChartCourse = 4;
    StartReactor = 5;
    SwipeCard = 6;
    ClearAsteroids = 7;
    UploadData = 8;
    InspectSample = 9;
    EmptyChute = 10;
    EmptyGarbage = 11;
    AlignEngineOutput = 12;
    FixWiring = 13;
    CalibrateDistributor = 14;
    DivertPower = 15;
    UnlockManifolds = 16;
    ResetReactor = 17;
    FixLights = 18;
    CleanO2Filter = 19;
    FixComms = 20;
    RestoreOxy = 21;
    StabilizeSteering = 22;
    AssembleArtifact = 23;
    SortSamples = 24;
    MeasureWeather = 25;
    EnterIdCode = 26;
    BuyBeverage = 27;
    ProcessData = 28;
    RunDiagnostics = 29;
    WaterPlants = 30;
    MonitorOxygen = 31;
    StoreArtifacts = 32;
    FillCanisters = 33;
    ActivateWeatherNodes = 34;
    InsertKeys = 35;
    ResetSeismic = 36;
    ScanBoardingPass = 37;
    OpenWaterways = 38;
    ReplaceWaterJug = 39;
    RepairDrill = 40;
    AlignTelescope = 41;
    RecordTemperature = 42;
    RebootWifi = 43;
    PolishRuby = 44;
    ResetBreakers = 45;
    Decontaminate = 46;
    MakeBurger = 47;
    UnlockSafe = 48;
    SortRecords = 49;
    PutAwayPistols = 50;
    FixShower = 51;
    CleanToilet = 52;
    DressMannequin = 53;
    PickUpTowels = 54;
    RewindTapes = 55;
    StartFans = 56;
    DevelopPhotos = 57;
    GetBiggolSword = 58;
    PutAwayRifles = 59;
    StopCharles = 60;
    VentCleaning = 61;
}
